# just_rozert_pay

./: .gitignore  AGENTS.md  Makefile-common.mk
common/api/: .gitignore  .npmrc  .thresholdrc  .validaterc  Makefile  Pipfile  add_get_requests_schemas.py  data-values.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  spec-partner.autogenerate.lib.yml  spec-partner_program.lib.yml  spec-payment.autogenerate.lib.yml  spec-payment.lib.yml  spec-promotion.lib.yml  spec-promotion.presets.lib.yml  spec-ytt.yml  spectral.yaml
common/api/nginx/: nginx.conf
common/api/src/: App.tsx
rozert-pay/: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn.conf.py  mypy.ini  pylintrc  pyproject.toml  pytest.ini  swagger.yml
rozert-pay/.codex/: config.toml
rozert-pay/.helm/: cert.rozert-pay.dev.betmaster.co.yaml  secrets.devs.yaml  secrets.production.yaml  values.backend.develop.yaml  values.backend.production.yaml  values.backend.yaml  values.frontend.develop.yaml  values.frontend.production.yaml  values.frontend.yaml
rozert-pay/.history/: .dockerignore_20260106160252  .dockerignore_20260106160254  .env.preprod_20250424192142.local  .env.preprod_20250502221927.local  .env_20250702165703  .env_20250702165708  .env_20250702165710  .env_20250702170152  .env_20250702170726  .gitignore_20260203103305  .gitignore_20260205144703  .gitignore_20260205144705  .gitignore_20260205144844  AGENTS_20260120201840.md  (+69 more)
scripts/: codex_maintenance.sh  codex_setup.sh  create_codex_postgres_user.sh
(+5200 files in other folders)
